--- a/src/main/resources/templates/order_details.html
+++ b/src/main/resources/templates/order_details.html
@@ -9,6 +9,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/custom.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <script type="text/javascript" th:href="@{/custom.js}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -26,11 +27,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Overview</a>
             </li>
-
-            <li class="nav-item ">
+            <li class="nav-item active">
                 <a class="nav-link" href="/products">Products</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" th:href="@{/orders}">Orders</a>
             </li>
             <li class="nav-item">
@@ -38,6 +38,12 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <button class="nav-link btn mr-3" th:data-toggle="'modal'" th:data-target="'#stockNotificationModal'"
+                        type="button">
+                    Stock Alert <i class="fa-solid fa-bell" th:style="${#lists.isEmpty(lowStockProducts)} ? '' : 'color: red;'"></i>
+                </button>
+            </li>
             <li class="nav-item">
                 <form  th:action="@{/logout}" method="post">
                     <button class="btn btn-primary" type="submit">Logout</button>
@@ -77,6 +83,34 @@
    </div>
   </div>
  </footer>
+<!--Inventory System Modal-->
+            <div class="modal fade" th:id="'stockNotificationModal'" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Stock Notification</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>The following products have low stock or are out of stock</p>
+                            <p>Select a product to view stock:</p>
+                            <ul class="list-group">
+                                <li class="list-group-item" th:each="p : ${lowStockProducts}">
+                                    <a th:href="@{/product/stock/{id}(id=${p.id})}" th:text="${p.productName}"></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
 </html>
