--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -8,6 +8,7 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" th:href="@{/custom.css}">
     <script type="text/javascript" th:href="@{/custom.js}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -48,6 +49,12 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <button class="nav-link btn mr-3" th:data-toggle="'modal'" th:data-target="'#stockNotificationModal'"
+                        type="button">
+                    Stock Alert <i class="fa-solid fa-bell" th:style="${#lists.isEmpty(lowStockProducts)} ? '' : 'color: red;'"></i>
+                </button>
+            </li>
             <li class="nav-item">
                 <form  th:action="@{/logout}" method="post">
                     <button class="btn btn-primary" type="submit">Logout</button>
@@ -92,6 +99,44 @@
                         </tbody>
 
                     </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<footer class="bg-light ">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <p>&copy; 2023 Bambi Admin. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+<!--Inventory System Modal-->
+
+            <div class="modal fade" th:id="'stockNotificationModal'" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Stock Notification</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>The following products have low stock or are out of stock</p>
+                            <p>Select a product to view stock:</p>
+                            <ul class="list-group">
+                                <li class="list-group-item" th:each="p : ${lowStockProducts}">
+                                    <a th:href="@{/product/stock/{id}(id=${p.id})}" th:text="${p.productName}"></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
