--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -135,7 +135,7 @@
         <td th:text="${product.productPrice}"></td>
         <td th:text="${product.productGender}"></td>
         <td th:text="${product.productCategory}"></td>
-        <td style="text-align: center;"><img th:src="images/${product.logoImagePath}" width="110px" height="120px" /></td>
+        <td style="text-align: center;"><img th:src="${product.logoImagePath}" width="110px" height="120px" /></td>
         <td>
           <p>
             <a th:href="@{/product/stock/{id}(id=${product.id})}"><button class="btn btn-outline-info">
